--- a/.github/workflows/master_fadhil-web.yml
+++ b/.github/workflows/master_fadhil-web.yml
@@ -23,13 +23,13 @@ jobs:
         with:
           php-version: '8.2'
 
-      - name: setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: install npm dependencies and build frontend
-        run:
+      - name: Install npm dependencies and build frontend
+        run: |
           npm install
           npm run build
 
@@ -44,7 +44,7 @@ jobs:
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "node_modules/*" ".git./*"
+        run: zip -r release.zip . -x "node_modules/*" ".git/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
